eiez-lang/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> EIEZQASM FLOAT SEMI decl_section statement_list
Rule 2     decl_section -> qreg_decl creg_decl
Rule 3     qreg_decl -> QREG ID LBRACKET INT RBRACKET SEMI
Rule 4     creg_decl -> CREG ID LBRACKET INT RBRACKET SEMI
Rule 5     statement_list -> statement statement_list
Rule 6     statement_list -> statement
Rule 7     statement -> gate_stmt
Rule 8     statement -> measure_stmt
Rule 9     statement -> control_stmt
Rule 10    statement -> optimization_stmt
Rule 11    statement -> gate_declaration
Rule 12    statement -> for_stmt
Rule 13    for_stmt -> FOR_KEYWORD ID IN_KEYWORD INT TO_KEYWORD INT LBRACE statement_list RBRACE
Rule 14    gate_declaration -> GATE_KEYWORD ID LPAREN opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE
Rule 15    formal_qarg_list -> qarg COMMA formal_qarg_list
Rule 16    formal_qarg_list -> qarg
Rule 17    opt_param_list -> ID COMMA opt_param_list
Rule 18    opt_param_list -> ID
Rule 19    opt_param_list -> empty
Rule 20    empty -> <empty>
Rule 21    control_stmt -> IF LPAREN ID LBRACKET INT RBRACKET EQ INT RPAREN statement
Rule 22    optimization_stmt -> OPTIMIZE qarg_list USING metric_name AS ID SEMI
Rule 23    metric_name -> METRIC_EIE
Rule 24    metric_name -> METRIC_TAU
Rule 25    gate_stmt -> gate_name qarg_list SEMI
Rule 26    gate_stmt -> gate_name LPAREN expr RPAREN qarg_list SEMI
Rule 27    gate_name -> GATE_H
Rule 28    gate_name -> GATE_X
Rule 29    gate_name -> GATE_Y
Rule 30    gate_name -> GATE_Z
Rule 31    gate_name -> GATE_RX
Rule 32    gate_name -> GATE_RY
Rule 33    gate_name -> GATE_RZ
Rule 34    gate_name -> GATE_CX
Rule 35    gate_name -> GATE_CZ
Rule 36    gate_name -> BARRIER
Rule 37    gate_name -> ID
Rule 38    qarg_list -> qarg COMMA qarg_list
Rule 39    qarg_list -> qarg
Rule 40    qarg -> ID LBRACKET exp_index RBRACKET
Rule 41    qarg -> ID
Rule 42    exp_index -> exp_index PLUS exp_index
Rule 43    exp_index -> exp_index MODULO exp_index
Rule 44    exp_index -> LPAREN exp_index RPAREN
Rule 45    exp_index -> ID
Rule 46    exp_index -> INT
Rule 47    measure_stmt -> MEASURE qarg ARROW ID LBRACKET INT RBRACKET SEMI
Rule 48    expr -> FLOAT
Rule 49    expr -> ID
Rule 50    expr -> INT

Terminals, with rules where they appear

ARROW                : 47
AS                   : 22
BARRIER              : 36
COMMA                : 15 17 38
CREG                 : 4
EIEZQASM             : 1
EQ                   : 21
FLOAT                : 1 48
FOR_KEYWORD          : 13
GATE_CX              : 34
GATE_CZ              : 35
GATE_H               : 27
GATE_KEYWORD         : 14
GATE_RX              : 31
GATE_RY              : 32
GATE_RZ              : 33
GATE_X               : 28
GATE_Y               : 29
GATE_Z               : 30
ID                   : 3 4 13 14 17 18 21 22 37 40 41 45 47 49
IF                   : 21
INT                  : 3 4 13 13 21 21 46 47 50
IN_KEYWORD           : 13
LBRACE               : 13 14
LBRACKET             : 3 4 21 40 47
LPAREN               : 14 21 26 44
MEASURE              : 47
METRIC_EIE           : 23
METRIC_TAU           : 24
MODULO               : 43
OPTIMIZE             : 22
PLUS                 : 42
QREG                 : 3
RBRACE               : 13 14
RBRACKET             : 3 4 21 40 47
RPAREN               : 14 21 26 44
SEMI                 : 1 3 4 22 25 26 47
TO_KEYWORD           : 13
USING                : 22
error                : 

Nonterminals, with rules where they appear

control_stmt         : 9
creg_decl            : 2
decl_section         : 1
empty                : 19
exp_index            : 40 42 42 43 43 44
expr                 : 26
for_stmt             : 12
formal_qarg_list     : 14 15
gate_declaration     : 11
gate_name            : 25 26
gate_stmt            : 7
measure_stmt         : 8
metric_name          : 22
opt_param_list       : 14 17
optimization_stmt    : 10
program              : 0
qarg                 : 15 16 38 39 47
qarg_list            : 22 25 26 38
qreg_decl            : 2
statement            : 5 6 21
statement_list       : 1 5 13 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . EIEZQASM FLOAT SEMI decl_section statement_list

    EIEZQASM        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> EIEZQASM . FLOAT SEMI decl_section statement_list

    FLOAT           shift and go to state 3


state 3

    (1) program -> EIEZQASM FLOAT . SEMI decl_section statement_list

    SEMI            shift and go to state 4


state 4

    (1) program -> EIEZQASM FLOAT SEMI . decl_section statement_list
    (2) decl_section -> . qreg_decl creg_decl
    (3) qreg_decl -> . QREG ID LBRACKET INT RBRACKET SEMI

    QREG            shift and go to state 7

    decl_section                   shift and go to state 5
    qreg_decl                      shift and go to state 6

state 5

    (1) program -> EIEZQASM FLOAT SEMI decl_section . statement_list
    (5) statement_list -> . statement statement_list
    (6) statement_list -> . statement
    (7) statement -> . gate_stmt
    (8) statement -> . measure_stmt
    (9) statement -> . control_stmt
    (10) statement -> . optimization_stmt
    (11) statement -> . gate_declaration
    (12) statement -> . for_stmt
    (25) gate_stmt -> . gate_name qarg_list SEMI
    (26) gate_stmt -> . gate_name LPAREN expr RPAREN qarg_list SEMI
    (47) measure_stmt -> . MEASURE qarg ARROW ID LBRACKET INT RBRACKET SEMI
    (21) control_stmt -> . IF LPAREN ID LBRACKET INT RBRACKET EQ INT RPAREN statement
    (22) optimization_stmt -> . OPTIMIZE qarg_list USING metric_name AS ID SEMI
    (14) gate_declaration -> . GATE_KEYWORD ID LPAREN opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE
    (13) for_stmt -> . FOR_KEYWORD ID IN_KEYWORD INT TO_KEYWORD INT LBRACE statement_list RBRACE
    (27) gate_name -> . GATE_H
    (28) gate_name -> . GATE_X
    (29) gate_name -> . GATE_Y
    (30) gate_name -> . GATE_Z
    (31) gate_name -> . GATE_RX
    (32) gate_name -> . GATE_RY
    (33) gate_name -> . GATE_RZ
    (34) gate_name -> . GATE_CX
    (35) gate_name -> . GATE_CZ
    (36) gate_name -> . BARRIER
    (37) gate_name -> . ID

    MEASURE         shift and go to state 17
    IF              shift and go to state 19
    OPTIMIZE        shift and go to state 20
    GATE_KEYWORD    shift and go to state 21
    FOR_KEYWORD     shift and go to state 22
    GATE_H          shift and go to state 23
    GATE_X          shift and go to state 24
    GATE_Y          shift and go to state 25
    GATE_Z          shift and go to state 26
    GATE_RX         shift and go to state 27
    GATE_RY         shift and go to state 28
    GATE_RZ         shift and go to state 29
    GATE_CX         shift and go to state 30
    GATE_CZ         shift and go to state 31
    BARRIER         shift and go to state 32
    ID              shift and go to state 18

    statement_list                 shift and go to state 8
    statement                      shift and go to state 9
    gate_stmt                      shift and go to state 10
    measure_stmt                   shift and go to state 11
    control_stmt                   shift and go to state 12
    optimization_stmt              shift and go to state 13
    gate_declaration               shift and go to state 14
    for_stmt                       shift and go to state 15
    gate_name                      shift and go to state 16

state 6

    (2) decl_section -> qreg_decl . creg_decl
    (4) creg_decl -> . CREG ID LBRACKET INT RBRACKET SEMI

    CREG            shift and go to state 34

    creg_decl                      shift and go to state 33

state 7

    (3) qreg_decl -> QREG . ID LBRACKET INT RBRACKET SEMI

    ID              shift and go to state 35


state 8

    (1) program -> EIEZQASM FLOAT SEMI decl_section statement_list .

    $end            reduce using rule 1 (program -> EIEZQASM FLOAT SEMI decl_section statement_list .)


state 9

    (5) statement_list -> statement . statement_list
    (6) statement_list -> statement .
    (5) statement_list -> . statement statement_list
    (6) statement_list -> . statement
    (7) statement -> . gate_stmt
    (8) statement -> . measure_stmt
    (9) statement -> . control_stmt
    (10) statement -> . optimization_stmt
    (11) statement -> . gate_declaration
    (12) statement -> . for_stmt
    (25) gate_stmt -> . gate_name qarg_list SEMI
    (26) gate_stmt -> . gate_name LPAREN expr RPAREN qarg_list SEMI
    (47) measure_stmt -> . MEASURE qarg ARROW ID LBRACKET INT RBRACKET SEMI
    (21) control_stmt -> . IF LPAREN ID LBRACKET INT RBRACKET EQ INT RPAREN statement
    (22) optimization_stmt -> . OPTIMIZE qarg_list USING metric_name AS ID SEMI
    (14) gate_declaration -> . GATE_KEYWORD ID LPAREN opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE
    (13) for_stmt -> . FOR_KEYWORD ID IN_KEYWORD INT TO_KEYWORD INT LBRACE statement_list RBRACE
    (27) gate_name -> . GATE_H
    (28) gate_name -> . GATE_X
    (29) gate_name -> . GATE_Y
    (30) gate_name -> . GATE_Z
    (31) gate_name -> . GATE_RX
    (32) gate_name -> . GATE_RY
    (33) gate_name -> . GATE_RZ
    (34) gate_name -> . GATE_CX
    (35) gate_name -> . GATE_CZ
    (36) gate_name -> . BARRIER
    (37) gate_name -> . ID

    $end            reduce using rule 6 (statement_list -> statement .)
    RBRACE          reduce using rule 6 (statement_list -> statement .)
    MEASURE         shift and go to state 17
    IF              shift and go to state 19
    OPTIMIZE        shift and go to state 20
    GATE_KEYWORD    shift and go to state 21
    FOR_KEYWORD     shift and go to state 22
    GATE_H          shift and go to state 23
    GATE_X          shift and go to state 24
    GATE_Y          shift and go to state 25
    GATE_Z          shift and go to state 26
    GATE_RX         shift and go to state 27
    GATE_RY         shift and go to state 28
    GATE_RZ         shift and go to state 29
    GATE_CX         shift and go to state 30
    GATE_CZ         shift and go to state 31
    BARRIER         shift and go to state 32
    ID              shift and go to state 18

    statement                      shift and go to state 9
    statement_list                 shift and go to state 36
    gate_stmt                      shift and go to state 10
    measure_stmt                   shift and go to state 11
    control_stmt                   shift and go to state 12
    optimization_stmt              shift and go to state 13
    gate_declaration               shift and go to state 14
    for_stmt                       shift and go to state 15
    gate_name                      shift and go to state 16

state 10

    (7) statement -> gate_stmt .

    MEASURE         reduce using rule 7 (statement -> gate_stmt .)
    IF              reduce using rule 7 (statement -> gate_stmt .)
    OPTIMIZE        reduce using rule 7 (statement -> gate_stmt .)
    GATE_KEYWORD    reduce using rule 7 (statement -> gate_stmt .)
    FOR_KEYWORD     reduce using rule 7 (statement -> gate_stmt .)
    GATE_H          reduce using rule 7 (statement -> gate_stmt .)
    GATE_X          reduce using rule 7 (statement -> gate_stmt .)
    GATE_Y          reduce using rule 7 (statement -> gate_stmt .)
    GATE_Z          reduce using rule 7 (statement -> gate_stmt .)
    GATE_RX         reduce using rule 7 (statement -> gate_stmt .)
    GATE_RY         reduce using rule 7 (statement -> gate_stmt .)
    GATE_RZ         reduce using rule 7 (statement -> gate_stmt .)
    GATE_CX         reduce using rule 7 (statement -> gate_stmt .)
    GATE_CZ         reduce using rule 7 (statement -> gate_stmt .)
    BARRIER         reduce using rule 7 (statement -> gate_stmt .)
    ID              reduce using rule 7 (statement -> gate_stmt .)
    $end            reduce using rule 7 (statement -> gate_stmt .)
    RBRACE          reduce using rule 7 (statement -> gate_stmt .)


state 11

    (8) statement -> measure_stmt .

    MEASURE         reduce using rule 8 (statement -> measure_stmt .)
    IF              reduce using rule 8 (statement -> measure_stmt .)
    OPTIMIZE        reduce using rule 8 (statement -> measure_stmt .)
    GATE_KEYWORD    reduce using rule 8 (statement -> measure_stmt .)
    FOR_KEYWORD     reduce using rule 8 (statement -> measure_stmt .)
    GATE_H          reduce using rule 8 (statement -> measure_stmt .)
    GATE_X          reduce using rule 8 (statement -> measure_stmt .)
    GATE_Y          reduce using rule 8 (statement -> measure_stmt .)
    GATE_Z          reduce using rule 8 (statement -> measure_stmt .)
    GATE_RX         reduce using rule 8 (statement -> measure_stmt .)
    GATE_RY         reduce using rule 8 (statement -> measure_stmt .)
    GATE_RZ         reduce using rule 8 (statement -> measure_stmt .)
    GATE_CX         reduce using rule 8 (statement -> measure_stmt .)
    GATE_CZ         reduce using rule 8 (statement -> measure_stmt .)
    BARRIER         reduce using rule 8 (statement -> measure_stmt .)
    ID              reduce using rule 8 (statement -> measure_stmt .)
    $end            reduce using rule 8 (statement -> measure_stmt .)
    RBRACE          reduce using rule 8 (statement -> measure_stmt .)


state 12

    (9) statement -> control_stmt .

    MEASURE         reduce using rule 9 (statement -> control_stmt .)
    IF              reduce using rule 9 (statement -> control_stmt .)
    OPTIMIZE        reduce using rule 9 (statement -> control_stmt .)
    GATE_KEYWORD    reduce using rule 9 (statement -> control_stmt .)
    FOR_KEYWORD     reduce using rule 9 (statement -> control_stmt .)
    GATE_H          reduce using rule 9 (statement -> control_stmt .)
    GATE_X          reduce using rule 9 (statement -> control_stmt .)
    GATE_Y          reduce using rule 9 (statement -> control_stmt .)
    GATE_Z          reduce using rule 9 (statement -> control_stmt .)
    GATE_RX         reduce using rule 9 (statement -> control_stmt .)
    GATE_RY         reduce using rule 9 (statement -> control_stmt .)
    GATE_RZ         reduce using rule 9 (statement -> control_stmt .)
    GATE_CX         reduce using rule 9 (statement -> control_stmt .)
    GATE_CZ         reduce using rule 9 (statement -> control_stmt .)
    BARRIER         reduce using rule 9 (statement -> control_stmt .)
    ID              reduce using rule 9 (statement -> control_stmt .)
    $end            reduce using rule 9 (statement -> control_stmt .)
    RBRACE          reduce using rule 9 (statement -> control_stmt .)


state 13

    (10) statement -> optimization_stmt .

    MEASURE         reduce using rule 10 (statement -> optimization_stmt .)
    IF              reduce using rule 10 (statement -> optimization_stmt .)
    OPTIMIZE        reduce using rule 10 (statement -> optimization_stmt .)
    GATE_KEYWORD    reduce using rule 10 (statement -> optimization_stmt .)
    FOR_KEYWORD     reduce using rule 10 (statement -> optimization_stmt .)
    GATE_H          reduce using rule 10 (statement -> optimization_stmt .)
    GATE_X          reduce using rule 10 (statement -> optimization_stmt .)
    GATE_Y          reduce using rule 10 (statement -> optimization_stmt .)
    GATE_Z          reduce using rule 10 (statement -> optimization_stmt .)
    GATE_RX         reduce using rule 10 (statement -> optimization_stmt .)
    GATE_RY         reduce using rule 10 (statement -> optimization_stmt .)
    GATE_RZ         reduce using rule 10 (statement -> optimization_stmt .)
    GATE_CX         reduce using rule 10 (statement -> optimization_stmt .)
    GATE_CZ         reduce using rule 10 (statement -> optimization_stmt .)
    BARRIER         reduce using rule 10 (statement -> optimization_stmt .)
    ID              reduce using rule 10 (statement -> optimization_stmt .)
    $end            reduce using rule 10 (statement -> optimization_stmt .)
    RBRACE          reduce using rule 10 (statement -> optimization_stmt .)


state 14

    (11) statement -> gate_declaration .

    MEASURE         reduce using rule 11 (statement -> gate_declaration .)
    IF              reduce using rule 11 (statement -> gate_declaration .)
    OPTIMIZE        reduce using rule 11 (statement -> gate_declaration .)
    GATE_KEYWORD    reduce using rule 11 (statement -> gate_declaration .)
    FOR_KEYWORD     reduce using rule 11 (statement -> gate_declaration .)
    GATE_H          reduce using rule 11 (statement -> gate_declaration .)
    GATE_X          reduce using rule 11 (statement -> gate_declaration .)
    GATE_Y          reduce using rule 11 (statement -> gate_declaration .)
    GATE_Z          reduce using rule 11 (statement -> gate_declaration .)
    GATE_RX         reduce using rule 11 (statement -> gate_declaration .)
    GATE_RY         reduce using rule 11 (statement -> gate_declaration .)
    GATE_RZ         reduce using rule 11 (statement -> gate_declaration .)
    GATE_CX         reduce using rule 11 (statement -> gate_declaration .)
    GATE_CZ         reduce using rule 11 (statement -> gate_declaration .)
    BARRIER         reduce using rule 11 (statement -> gate_declaration .)
    ID              reduce using rule 11 (statement -> gate_declaration .)
    $end            reduce using rule 11 (statement -> gate_declaration .)
    RBRACE          reduce using rule 11 (statement -> gate_declaration .)


state 15

    (12) statement -> for_stmt .

    MEASURE         reduce using rule 12 (statement -> for_stmt .)
    IF              reduce using rule 12 (statement -> for_stmt .)
    OPTIMIZE        reduce using rule 12 (statement -> for_stmt .)
    GATE_KEYWORD    reduce using rule 12 (statement -> for_stmt .)
    FOR_KEYWORD     reduce using rule 12 (statement -> for_stmt .)
    GATE_H          reduce using rule 12 (statement -> for_stmt .)
    GATE_X          reduce using rule 12 (statement -> for_stmt .)
    GATE_Y          reduce using rule 12 (statement -> for_stmt .)
    GATE_Z          reduce using rule 12 (statement -> for_stmt .)
    GATE_RX         reduce using rule 12 (statement -> for_stmt .)
    GATE_RY         reduce using rule 12 (statement -> for_stmt .)
    GATE_RZ         reduce using rule 12 (statement -> for_stmt .)
    GATE_CX         reduce using rule 12 (statement -> for_stmt .)
    GATE_CZ         reduce using rule 12 (statement -> for_stmt .)
    BARRIER         reduce using rule 12 (statement -> for_stmt .)
    ID              reduce using rule 12 (statement -> for_stmt .)
    $end            reduce using rule 12 (statement -> for_stmt .)
    RBRACE          reduce using rule 12 (statement -> for_stmt .)


state 16

    (25) gate_stmt -> gate_name . qarg_list SEMI
    (26) gate_stmt -> gate_name . LPAREN expr RPAREN qarg_list SEMI
    (38) qarg_list -> . qarg COMMA qarg_list
    (39) qarg_list -> . qarg
    (40) qarg -> . ID LBRACKET exp_index RBRACKET
    (41) qarg -> . ID

    LPAREN          shift and go to state 38
    ID              shift and go to state 40

    qarg_list                      shift and go to state 37
    qarg                           shift and go to state 39

state 17

    (47) measure_stmt -> MEASURE . qarg ARROW ID LBRACKET INT RBRACKET SEMI
    (40) qarg -> . ID LBRACKET exp_index RBRACKET
    (41) qarg -> . ID

    ID              shift and go to state 40

    qarg                           shift and go to state 41

state 18

    (37) gate_name -> ID .

    LPAREN          reduce using rule 37 (gate_name -> ID .)
    ID              reduce using rule 37 (gate_name -> ID .)


state 19

    (21) control_stmt -> IF . LPAREN ID LBRACKET INT RBRACKET EQ INT RPAREN statement

    LPAREN          shift and go to state 42


state 20

    (22) optimization_stmt -> OPTIMIZE . qarg_list USING metric_name AS ID SEMI
    (38) qarg_list -> . qarg COMMA qarg_list
    (39) qarg_list -> . qarg
    (40) qarg -> . ID LBRACKET exp_index RBRACKET
    (41) qarg -> . ID

    ID              shift and go to state 40

    qarg_list                      shift and go to state 43
    qarg                           shift and go to state 39

state 21

    (14) gate_declaration -> GATE_KEYWORD . ID LPAREN opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE

    ID              shift and go to state 44


state 22

    (13) for_stmt -> FOR_KEYWORD . ID IN_KEYWORD INT TO_KEYWORD INT LBRACE statement_list RBRACE

    ID              shift and go to state 45


state 23

    (27) gate_name -> GATE_H .

    LPAREN          reduce using rule 27 (gate_name -> GATE_H .)
    ID              reduce using rule 27 (gate_name -> GATE_H .)


state 24

    (28) gate_name -> GATE_X .

    LPAREN          reduce using rule 28 (gate_name -> GATE_X .)
    ID              reduce using rule 28 (gate_name -> GATE_X .)


state 25

    (29) gate_name -> GATE_Y .

    LPAREN          reduce using rule 29 (gate_name -> GATE_Y .)
    ID              reduce using rule 29 (gate_name -> GATE_Y .)


state 26

    (30) gate_name -> GATE_Z .

    LPAREN          reduce using rule 30 (gate_name -> GATE_Z .)
    ID              reduce using rule 30 (gate_name -> GATE_Z .)


state 27

    (31) gate_name -> GATE_RX .

    LPAREN          reduce using rule 31 (gate_name -> GATE_RX .)
    ID              reduce using rule 31 (gate_name -> GATE_RX .)


state 28

    (32) gate_name -> GATE_RY .

    LPAREN          reduce using rule 32 (gate_name -> GATE_RY .)
    ID              reduce using rule 32 (gate_name -> GATE_RY .)


state 29

    (33) gate_name -> GATE_RZ .

    LPAREN          reduce using rule 33 (gate_name -> GATE_RZ .)
    ID              reduce using rule 33 (gate_name -> GATE_RZ .)


state 30

    (34) gate_name -> GATE_CX .

    LPAREN          reduce using rule 34 (gate_name -> GATE_CX .)
    ID              reduce using rule 34 (gate_name -> GATE_CX .)


state 31

    (35) gate_name -> GATE_CZ .

    LPAREN          reduce using rule 35 (gate_name -> GATE_CZ .)
    ID              reduce using rule 35 (gate_name -> GATE_CZ .)


state 32

    (36) gate_name -> BARRIER .

    LPAREN          reduce using rule 36 (gate_name -> BARRIER .)
    ID              reduce using rule 36 (gate_name -> BARRIER .)


state 33

    (2) decl_section -> qreg_decl creg_decl .

    MEASURE         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    IF              reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    OPTIMIZE        reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_KEYWORD    reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    FOR_KEYWORD     reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_H          reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_X          reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_Y          reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_Z          reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_RX         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_RY         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_RZ         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_CX         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    GATE_CZ         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    BARRIER         reduce using rule 2 (decl_section -> qreg_decl creg_decl .)
    ID              reduce using rule 2 (decl_section -> qreg_decl creg_decl .)


state 34

    (4) creg_decl -> CREG . ID LBRACKET INT RBRACKET SEMI

    ID              shift and go to state 46


state 35

    (3) qreg_decl -> QREG ID . LBRACKET INT RBRACKET SEMI

    LBRACKET        shift and go to state 47


state 36

    (5) statement_list -> statement statement_list .

    $end            reduce using rule 5 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 5 (statement_list -> statement statement_list .)


state 37

    (25) gate_stmt -> gate_name qarg_list . SEMI

    SEMI            shift and go to state 48


state 38

    (26) gate_stmt -> gate_name LPAREN . expr RPAREN qarg_list SEMI
    (48) expr -> . FLOAT
    (49) expr -> . ID
    (50) expr -> . INT

    FLOAT           shift and go to state 50
    ID              shift and go to state 51
    INT             shift and go to state 52

    expr                           shift and go to state 49

state 39

    (38) qarg_list -> qarg . COMMA qarg_list
    (39) qarg_list -> qarg .

    COMMA           shift and go to state 53
    SEMI            reduce using rule 39 (qarg_list -> qarg .)
    USING           reduce using rule 39 (qarg_list -> qarg .)


state 40

    (40) qarg -> ID . LBRACKET exp_index RBRACKET
    (41) qarg -> ID .

    LBRACKET        shift and go to state 54
    COMMA           reduce using rule 41 (qarg -> ID .)
    SEMI            reduce using rule 41 (qarg -> ID .)
    ARROW           reduce using rule 41 (qarg -> ID .)
    USING           reduce using rule 41 (qarg -> ID .)
    LBRACE          reduce using rule 41 (qarg -> ID .)


state 41

    (47) measure_stmt -> MEASURE qarg . ARROW ID LBRACKET INT RBRACKET SEMI

    ARROW           shift and go to state 55


state 42

    (21) control_stmt -> IF LPAREN . ID LBRACKET INT RBRACKET EQ INT RPAREN statement

    ID              shift and go to state 56


state 43

    (22) optimization_stmt -> OPTIMIZE qarg_list . USING metric_name AS ID SEMI

    USING           shift and go to state 57


state 44

    (14) gate_declaration -> GATE_KEYWORD ID . LPAREN opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE

    LPAREN          shift and go to state 58


state 45

    (13) for_stmt -> FOR_KEYWORD ID . IN_KEYWORD INT TO_KEYWORD INT LBRACE statement_list RBRACE

    IN_KEYWORD      shift and go to state 59


state 46

    (4) creg_decl -> CREG ID . LBRACKET INT RBRACKET SEMI

    LBRACKET        shift and go to state 60


state 47

    (3) qreg_decl -> QREG ID LBRACKET . INT RBRACKET SEMI

    INT             shift and go to state 61


state 48

    (25) gate_stmt -> gate_name qarg_list SEMI .

    MEASURE         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    IF              reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    OPTIMIZE        reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_KEYWORD    reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    FOR_KEYWORD     reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_H          reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_X          reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_Y          reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_Z          reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_RX         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_RY         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_RZ         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_CX         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    GATE_CZ         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    BARRIER         reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    ID              reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    $end            reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)
    RBRACE          reduce using rule 25 (gate_stmt -> gate_name qarg_list SEMI .)


state 49

    (26) gate_stmt -> gate_name LPAREN expr . RPAREN qarg_list SEMI

    RPAREN          shift and go to state 62


state 50

    (48) expr -> FLOAT .

    RPAREN          reduce using rule 48 (expr -> FLOAT .)


state 51

    (49) expr -> ID .

    RPAREN          reduce using rule 49 (expr -> ID .)


state 52

    (50) expr -> INT .

    RPAREN          reduce using rule 50 (expr -> INT .)


state 53

    (38) qarg_list -> qarg COMMA . qarg_list
    (38) qarg_list -> . qarg COMMA qarg_list
    (39) qarg_list -> . qarg
    (40) qarg -> . ID LBRACKET exp_index RBRACKET
    (41) qarg -> . ID

    ID              shift and go to state 40

    qarg                           shift and go to state 39
    qarg_list                      shift and go to state 63

state 54

    (40) qarg -> ID LBRACKET . exp_index RBRACKET
    (42) exp_index -> . exp_index PLUS exp_index
    (43) exp_index -> . exp_index MODULO exp_index
    (44) exp_index -> . LPAREN exp_index RPAREN
    (45) exp_index -> . ID
    (46) exp_index -> . INT

    LPAREN          shift and go to state 66
    ID              shift and go to state 64
    INT             shift and go to state 67

    exp_index                      shift and go to state 65

state 55

    (47) measure_stmt -> MEASURE qarg ARROW . ID LBRACKET INT RBRACKET SEMI

    ID              shift and go to state 68


state 56

    (21) control_stmt -> IF LPAREN ID . LBRACKET INT RBRACKET EQ INT RPAREN statement

    LBRACKET        shift and go to state 69


state 57

    (22) optimization_stmt -> OPTIMIZE qarg_list USING . metric_name AS ID SEMI
    (23) metric_name -> . METRIC_EIE
    (24) metric_name -> . METRIC_TAU

    METRIC_EIE      shift and go to state 71
    METRIC_TAU      shift and go to state 72

    metric_name                    shift and go to state 70

state 58

    (14) gate_declaration -> GATE_KEYWORD ID LPAREN . opt_param_list RPAREN formal_qarg_list LBRACE statement_list RBRACE
    (17) opt_param_list -> . ID COMMA opt_param_list
    (18) opt_param_list -> . ID
    (19) opt_param_list -> . empty
    (20) empty -> .

    ID              shift and go to state 73
    RPAREN          reduce using rule 20 (empty -> .)

    opt_param_list                 shift and go to state 74
    empty                          shift and go to state 75

state 59

    (13) for_stmt -> FOR_KEYWORD ID IN_KEYWORD . INT TO_KEYWORD INT LBRACE statement_list RBRACE

    INT             shift and go to state 76


state 60

    (4) creg_decl -> CREG ID LBRACKET . INT RBRACKET SEMI

    INT             shift and go to state 77


state 61

    (3) qreg_decl -> QREG ID LBRACKET INT . RBRACKET SEMI

    RBRACKET        shift and go to state 78


state 62

    (26) gate_stmt -> gate_name LPAREN expr RPAREN . qarg_list SEMI
    (38) qarg_list -> . qarg COMMA qarg_list
    (39) qarg_list -> . qarg
    (40) qarg -> . ID LBRACKET exp_index RBRACKET
    (41) qarg -> . ID

    ID              shift and go to state 40

    qarg_list                      shift and go to state 79
    qarg                           shift and go to state 39

state 63

    (38) qarg_list -> qarg COMMA qarg_list .

    SEMI            reduce using rule 38 (qarg_list -> qarg COMMA qarg_list .)
    USING           reduce using rule 38 (qarg_list -> qarg COMMA qarg_list .)


state 64

    (45) exp_index -> ID .

    RBRACKET        reduce using rule 45 (exp_index -> ID .)
    PLUS            reduce using rule 45 (exp_index -> ID .)
    MODULO          reduce using rule 45 (exp_index -> ID .)
    RPAREN          reduce using rule 45 (exp_index -> ID .)


state 65

    (40) qarg -> ID LBRACKET exp_index . RBRACKET
    (42) exp_index -> exp_index . PLUS exp_index
    (43) exp_index -> exp_index . MODULO exp_index

    RBRACKET        shift and go to state 80
    PLUS            shift and go to state 81
    MODULO          shift and go to state 82


state 66

    (44) exp_index -> LPAREN . exp_index RPAREN
    (42) exp_index -> . exp_index PLUS exp_index
    (43) exp_index -> . exp_index MODULO exp_index
    (44) exp_index -> . LPAREN exp_index RPAREN
    (45) exp_index -> . ID
    (46) exp_index -> . INT

